changed twitch_id for twitchId
