# models/Game.js
@@ -1,12 +1,12 @@
-const mongoose = require("mongoose");
+const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
 const GameSchema = new Schema({
-    twitch_id: Number,
+    twitchId: Number,
     name: String,
-    box_art_url: String,
+    boxArtUrl: String,
 });
 
-const Game = mongoose.model("game", GameSchema);
+const Game = mongoose.model('game', GameSchema);
 
 module.exports = Game;
